# studyhub

./: .gitignore  README.md  index.html  netlify.toml  package-lock.json  package.json  practice.html  progress.md  studyhub_sync.py  vite.config.ts  vite.config.web.ts
.github/workflows/: release.yml
docs/: coding-question-prompt.md
scripts/: rename-web-entry.mjs
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: App.tsx  router.tsx
src/components/charts/: FocusHeatmap.tsx  Heatmap.tsx  QuestionScoreHeatmap.tsx  ReviewHeatmap.tsx  StudyTimeChart.tsx
src/components/layout/: AppLayout.tsx
src/components/ui/: AiEvalCard.tsx  Calculator.tsx  CodeEditor.tsx  ConfirmDialog.tsx  CountUp.tsx  DiffView.tsx  EmptyState.tsx  KeyboardShortcuts.tsx  PageHeader.tsx  (+6 more)
src/db/: database.ts  migrations.ts  schema.ts
src/hooks/: useTimerSounds.ts
src/services/: accentPresets.ts  aiEvaluationService.ts  backupService.ts  catPetService.ts  codeInterpreterPrefs.ts  codeRunner.ts  fileStorage.ts  importQuestions.test.ts  importQuestions.ts  notificationService.ts  numpyCompletions.ts  overlayWindowService.ts  practiceSyncService.ts  preferencesService.ts  soundService.ts  spacedRepetition.test.ts  spacedRepetition.ts  statsService.ts  timerLogic.test.ts  timerLogic.ts  torchMock.ts
src/store/: appStore.ts  sessionTimerStore.ts  uiStore.ts
src/styles/: accents.css  globals.css  themes.css  tokens.css
src/types/: timer.ts
src/utils/: formatTime.test.ts  formatTime.ts
src/web/: PracticeWebApp.tsx  main.tsx  practice-web.css  practiceStore.ts
src/workers/: pyodide.worker.ts
(+21 files in other folders)
